{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 135,
  "lineage": "1c988043-572b-60ef-daa0-4907cc5c4df5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "extraction_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:891377142936:transit-gateway-attachment/tgw-attach-02f9c4cba40706a2b",
            "dns_support": "enable",
            "id": "tgw-attach-02f9c4cba40706a2b",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-082c6409208a391e4",
              "subnet-0f4f2cf220658e61f"
            ],
            "tags": {
              "Name": "extraction-staging-tgw-attachment"
            },
            "tags_all": {
              "Name": "extraction-staging-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0681064c35feff4c5",
            "vpc_id": "vpc-0607bfb6d374f4584",
            "vpc_owner_id": "891377142936"
          },
          "dependencies": [
            "aws_subnet.sn-tgw-core-1",
            "aws_subnet.sn-tgw-core-2",
            "aws_vpc.extraction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02aa559d0131dd11e",
            "arn": "arn:aws:ec2:us-east-1:891377142936:elastic-ip/eipalloc-02aa559d0131dd11e",
            "association_id": "eipassoc-06560671a84661dab",
            "domain": "vpc",
            "id": "eipalloc-02aa559d0131dd11e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-023142858d7b59da2",
            "private_dns": "ip-10-162-16-250.ec2.internal",
            "private_ip": "10.162.16.250",
            "public_dns": "ec2-13-217-234-30.compute-1.amazonaws.com",
            "public_ip": "13.217.234.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-1-staging"
            },
            "tags_all": {
              "Name": "nat-eip-1-staging"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087788f9d148427f0",
            "arn": "arn:aws:ec2:us-east-1:891377142936:elastic-ip/eipalloc-087788f9d148427f0",
            "association_id": "eipassoc-063b9ec9c004e1903",
            "domain": "vpc",
            "id": "eipalloc-087788f9d148427f0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e47884f3bccefab",
            "private_dns": "ip-10-162-24-252.ec2.internal",
            "private_ip": "10.162.24.252",
            "public_dns": "ec2-34-238-48-9.compute-1.amazonaws.com",
            "public_ip": "34.238.48.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-2-staging"
            },
            "tags_all": {
              "Name": "nat-eip-2-staging"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "extraction_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:internet-gateway/igw-0ab816b297b8ef0e2",
            "id": "igw-0ab816b297b8ef0e2",
            "owner_id": "891377142936",
            "tags": {
              "Name": "extraction-igw-staging"
            },
            "tags_all": {
              "Name": "extraction-igw-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02aa559d0131dd11e",
            "association_id": "eipassoc-06560671a84661dab",
            "connectivity_type": "public",
            "id": "nat-05e22dbc22c49319f",
            "network_interface_id": "eni-023142858d7b59da2",
            "private_ip": "10.162.16.250",
            "public_ip": "13.217.234.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09289207657a39711",
            "tags": {
              "Name": "nat-gw-1-staging"
            },
            "tags_all": {
              "Name": "nat-gw-1-staging"
            }
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.extraction_igw",
            "aws_subnet.sn-ngw-1",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087788f9d148427f0",
            "association_id": "eipassoc-063b9ec9c004e1903",
            "connectivity_type": "public",
            "id": "nat-07b9643b056ba5bbf",
            "network_interface_id": "eni-05e47884f3bccefab",
            "private_ip": "10.162.24.252",
            "public_ip": "34.238.48.9",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d24faae55177324",
            "tags": {
              "Name": "nat-gw-2-staging"
            },
            "tags_all": {
              "Name": "nat-gw-2-staging"
            }
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.extraction_igw",
            "aws_subnet.sn-ngw-2",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e33767eb459104a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05e22dbc22c49319f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e33767eb459104a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.extraction_igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.timescalert",
            "aws_subnet.sn-ngw-1",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "timescalert_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.162.6.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e33767eb459104a0872712719",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e33767eb459104a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0681064c35feff4c5",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.timescalert",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "timescalert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:route-table/rtb-0e33767eb459104a0",
            "id": "rtb-0e33767eb459104a0",
            "owner_id": "891377142936",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e22dbc22c49319f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.162.6.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0681064c35feff4c5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-data-extraction-rt-private"
            },
            "tags_all": {
              "Name": "staging-data-extraction-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-dialog-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-089b6ae4e0c7a90de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.19.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089b6ae4e0c7a90de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-dialog-lambda-1-staging"
            },
            "tags_all": {
              "Name": "sn-dialog-lambda-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-dialog-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-0187abf55b0cf3012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.26.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0187abf55b0cf3012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-dialog-lambda-2-staging"
            },
            "tags_all": {
              "Name": "sn-dialog-lambda-2-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-inet-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-030c92a2675c3161a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030c92a2675c3161a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-inet-lambda-1-staging"
            },
            "tags_all": {
              "Name": "sn-inet-lambda-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-inet-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-0d23ae2a300dfb08b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d23ae2a300dfb08b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-inet-lambda-2-staging"
            },
            "tags_all": {
              "Name": "sn-inet-lambda-2-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-mwaa-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-0b736288ba028bfea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b736288ba028bfea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-mwaa-1-staging"
            },
            "tags_all": {
              "Name": "sn-mwaa-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-mwaa-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-0b02599c579236324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b02599c579236324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-mwaa-2-staging"
            },
            "tags_all": {
              "Name": "sn-mwaa-2-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-ngw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-09289207657a39711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.16.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09289207657a39711",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-ngw-1-staging"
            },
            "tags_all": {
              "Name": "sn-ngw-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-ngw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-03d24faae55177324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.24.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d24faae55177324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-ngw-2-staging"
            },
            "tags_all": {
              "Name": "sn-ngw-2-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-privatelink-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-02a722dc4c0c2beda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.16.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a722dc4c0c2beda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-privatelink-1-staging"
            },
            "tags_all": {
              "Name": "sn-privatelink-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-privatelink-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-04c605c11ed598ce4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.24.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c605c11ed598ce4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-privatelink-2-staging"
            },
            "tags_all": {
              "Name": "sn-privatelink-2-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-tgw-core-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-082c6409208a391e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.16.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c6409208a391e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-tgw-core-1-staging"
            },
            "tags_all": {
              "Name": "sn-tgw-core-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-tgw-core-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-0f4f2cf220658e61f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.24.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4f2cf220658e61f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-tgw-core-2-staging"
            },
            "tags_all": {
              "Name": "sn-tgw-core-2-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-versa-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-002202ece46892f2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.18.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002202ece46892f2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-versa-lambda-1-staging"
            },
            "tags_all": {
              "Name": "sn-versa-lambda-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-versa-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-076871a8c20ea8a26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.26.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076871a8c20ea8a26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-versa-lambda-2-staging"
            },
            "tags_all": {
              "Name": "sn-versa-lambda-2-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "extraction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:vpc/vpc-0607bfb6d374f4584",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.162.16.0/20",
            "default_network_acl_id": "acl-05b36584fcda05688",
            "default_route_table_id": "rtb-0e91a95145e6d9c0a",
            "default_security_group_id": "sg-07c400b86ca274567",
            "dhcp_options_id": "dopt-0e99ce589170625cd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0607bfb6d374f4584",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e91a95145e6d9c0a",
            "owner_id": "891377142936",
            "tags": {
              "Name": "extraction-staging"
            },
            "tags_all": {
              "Name": "extraction-staging"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}